Fix flex layout issue in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ body {
 
 .components-container {
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
-    height: 100%;
     width: 100%;
     background-color: #aadaf1;
     border-radius: 12px;
